# stock-fight

./: .dockerignore  .gitignore  .python-version  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.js  styles.css
stock_fight/app/: config.py  main.py  redis_cache.py
