[tool.poetry]
name = "stock_fight"
version = "0.1.0"
description = "An app to compare two stock market symbols"
authors = ["Dale-Kurt Murray <hello@dalekurtmurray.com>"]
readme = "README.md"
packages = [{include = "stock_fight"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
redis = "^4.3.4"
aiohttp = "^3.8.1"
httpx = "^0.23.0"
python-dotenv = "^0.19.2"
alpha-vantage = "^2.3.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
